--- a/debian/rules
+++ b/debian/rules
@@ -21,13 +21,8 @@ override_dh_auto_clean:
 	dh_auto_clean
 
 override_dh_auto_configure:
-	# force disable codecs (most of them are dependencies of libav) and pulseaudio dependencies
-	#mkdir -p daemon/contrib/native && cd daemon/contrib/native && ../bootstrap --disable-gsm --disable-vorbis --disable-vorbisenc --disable-speex --disable-opus --disable-ogg --disable-flac --disable-sndfile --disable-speexdsp && make -j
 	cd libringclient && mkdir -p build && mkdir -p install && cd build && cmake -DRING_BUILD_DIR=$(PWD)/daemon/src -DCMAKE_INSTALL_PREFIX=$(PWD)/libringclient/install -DENABLE_VIDEO=true -DENABLE_STATIC=true .. && make -j 2 && make install
 	mkdir -p build && mkdir -p install && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$(PWD)/libringclient/install -DLIB_RING_CLIENT_LIBRARY=$(PWD)/libringclient/install/lib/libringclient_static.a -DENABLE_STATIC=true ..
-#	cd ring-client-gnome && ./config.sh --prefix=/usr CFLAGS="$(CFLAGS) -fPIC" LDFLAGS="-Wl,-z,defs" 
-#	cd ring-client-gnome && ./config.sh --prefix=/usr CFLAGS="$(CFLAGS) -fPIC" LDFLAGS="-Wl,-z,defs" 
-#	cd ring-client-kde && ./autogen.sh && ./configure --prefix=/usr CFLAGS="$(CFLAGS) -fPIC" LDFLAGS="-Wl,-z,defs" 
 
 override_dh_auto_build:
 	cd build && LDFLAGS="-lpthread" make -j 2
@@ -36,8 +31,10 @@ override_dh_auto_install:
 	# RING kde
 	cd build && make DESTDIR=$(CURDIR)/debian/ring-kde install
 	mkdir -p $(CURDIR)/debian/ring-kde/usr/bin
+	mkdir -p $(CURDIR)/debian/ring-kde/usr/share
 	## FIXME: bad install path from make ...
 	mv $(CURDIR)/debian/ring-kde/sources/ring-kde/libringclient/install/bin/* $(CURDIR)/debian/ring-kde/usr/bin
+	mv $(CURDIR)/debian/ring-kde/sources/ring-kde/libringclient/install/share/* $(CURDIR)/debian/ring-kde/usr/share/
 	rm -rf  $(CURDIR)/debian/ring-kde/sources
 	dh_auto_install
 
